the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2018-11-01] RFC4880: added Export() for TMCG_OpenPGP_Prvkey
* [2018-10-30] RFC4880: added generic VerifyData() for TMCG_OpenPGP_Signature
* [2018-10-29] RFC4880: store included signatures within TMCG_OpenPGP_Message
* [2018-10-29] RFC4880: removed interface CheckMDC() from TMCG_OpenPGP_Message
* [2018-10-28] RFC4880: include MDC verification in function Decrypt()
* [2018-10-28] RFC4880: fixes the selected data/packets for computing the MDC
* [2018-10-25] aiounicast_select: handle error EINTR during call of select
* [2018-10-21] t-rfc4880: check libgcrypt version before testing Ed25519 key
* [2018-10-10] RBC: used some standard exceptions for error handling
* [2018-09-21] DKG, ASTC, VSS: used some standard exceptions for error handling
* [2018-09-20] mpz_srandom: important bugfix for use of additional Botan RNG
* [2018-09-16] mpz_helper: used some standard exceptions for error handling
* [2018-09-16] mpz_sqrtm: used some standard exceptions for error handling
* [2018-09-16] mpz_spowm: used some standard exceptions for error handling
* [2018-09-16] mpz_srandom: used some standard exceptions for error handling
* [2018-09-09] release 1.3.14 of LibTMCG
* [2018-09-06] RFC4880: added Check() and Reduce() for TMCG_OpenPGP_Keyring
* [2018-09-03] RFC4880: added tmcg_openpgp_secure_string[stream]_t
* [2018-09-03] RFC4880: added 1-/2-octet length format in PacketLengthEncode()
* [2018-08-31] RFC4880: added support for EdDSA (algorithm 22) from RFC 4880bis
* [2018-08-28] RFC4880: added AccumulateRevocationCodes()
* [2018-08-28] RFC4880: added tmcg_openpgp_revcode_t
* [2018-08-24] RFC4880: added types and parameters for Notation Data