@@ -435,11 +435,12 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 		{
 			if (use_very_strong_randomness)
 			{
-				if ((ssrandomm_cache != NULL) && (ssrandomm_cache_mod != NULL) && (ssrandomm_cache_avail != NULL))
+				if ((ssrandomm_cache != NULL) && (ssrandomm_cache_mod != NULL) &&
+					(ssrandomm_cache_avail != NULL))
 				{
 					err << "P_" << i << ": using very strong randomness from cache" << std::endl;
-					tmcg_mpz_ssrandomm_cache(ssrandomm_cache, ssrandomm_cache_mod, ssrandomm_cache_avail, a_i[k], q);
-					tmcg_mpz_ssrandomm_cache(ssrandomm_cache, ssrandomm_cache_mod, ssrandomm_cache_avail, b_i[k], q);
+					tmcg_mpz_ssrandomm_cache(ssrandomm_cache, ssrandomm_cache_mod, *ssrandomm_cache_avail, a_i[k], q);
+					tmcg_mpz_ssrandomm_cache(ssrandomm_cache, ssrandomm_cache_mod, *ssrandomm_cache_avail, b_i[k], q);
 				}
 				else
 				{
